# vaultdotenv

./: .gitignore  README.md  package.json
clients/python/: pyproject.toml
clients/python/vault_env/: __init__.py  client.py
clients/python/vaultdotenv/: __init__.py  cli.py  client.py  crypto.py  device.py
clients/python/vaultdotenv/commands/: projects.py
server/: schema.sql  worker.js  wrangler.staging.toml
server/handlers/: admin.js  auth.js  billing.js  devices.js  invites.js  members.js  orgs.js  projects.js  secrets.js  stripe.js
server/lib/: config.js  crypto.js  email.js  middleware.js
server/migrations/: 0003_reveal_tokens.sql  0004_key_count.sql  0004_permissions.sql  0005_backfill_key_count.sql  0006_superadmin.sql  0007_cli_auth.sql
src/: cli.js  config.js  crypto.js  index.js  mcp.js
src/commands/: auth.js  devices.js  init.js  keys.js  projects.js  secrets.js  versions.js
test/integration/: api.test.js  cli.test.js
test/unit/: config.test.js  crypto.test.js  index.test.js
